ci: update setup scripts

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "yarn compile && hardhat test ",
     "docs-clean": "rm -rf docs",
     "docs-gen": "hardhat docgen",
-    "coverage": "yarn compile && npx hardhat coverage"
+    "coverage": "yarn compile && npx hardhat coverage",
+
+    "deploy-goerli": "hardhat deployOCP --network goerli",
+    "deploy-base-testnet": "hardhat deployOCP --network base_testnet",
+    "setup1": "hardhat setupBridge --network goerli --target-network base_testnet",
+    "setup2": "hardhat setupBridge --network base_testnet --target-network goerli"
   },
   "keywords": [],
   "author": "",
