--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
 
     "deploy-goerli": "hardhat deployOCP --network goerli",
     "deploy-base-test": "hardhat deployOCP --network base_testnet",
-    "setup1": "hardhat setupBridge --network goerli --target-network base_testnet",
-    "setup2": "hardhat setupBridge --network base_testnet --target-network goerli",
-    
-    "deploy-all": "yarn deploy-goerli && yarn deploy-base-test && yarn setup1 && yarn setup2",
+    "deploy-zksync-test": "hardhat deployOCP --network zksync_testnet",
+    "setup1": "hardhat setupBridge --network goerli --target-networks base_testnet,zksync_testnet",
+    "setup2": "hardhat setupBridge --network base_testnet --target-networks goerli",
 
 
     "clean-deployments": "rm -rf deployments/base_testnet && rm -rf deployments/goerli",
@@ -28,6 +27,8 @@
   "devDependencies": {
     "@layerzerolabs/solidity-examples": "^0.0.13",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.14",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@openzeppelin/contracts": "^4.8.1",
     "@typechain/ethers-v5": "^10.1.0",
@@ -49,6 +50,7 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zksync-web3": "^0.14.3"
   }
 }
