deploy testnet 1025, add omniMintETH

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "docs-gen": "hardhat docgen",
     "coverage": "yarn compile && npx hardhat coverage",
     "deploy-zksync-test": "hardhat deployOCP --network zksync_testnet",
-    "deploy-goerli": "hardhat deployOCP --network goerli",
+    "deploy-linea-test": "hardhat deployOCP --network linea_testnet",
     "deploy-base-test": "hardhat deployOCP --network base_testnet",
-    "setup1": "hardhat setupBridge --network zksync_testnet --target-networks goerli,base_testnet",
-    "setup2": "hardhat setupBridge --network goerli --target-networks base_testnet,zksync_testnet",
-    "setup3": "hardhat setupBridge --network base_testnet --target-networks goerli,zksync_testnet",
+    "setup1": "hardhat setupBridge --network zksync_testnet --target-networks linea_testnet,base_testnet",
+    "setup2": "hardhat setupBridge --network linea_testnet --target-networks base_testnet,zksync_testnet",
+    "setup3": "hardhat setupBridge --network base_testnet --target-networks linea_testnet,zksync_testnet",
     "omniMint": "hardhat run scripts/omniMint.ts --network zksync_testnet",
-    "omniRedeem": "hardhat run scripts/omniRedeem.ts --network goerli",
+    "omniMintETH": "hardhat run scripts/omniMintETH.ts --network zksync_testnet",
+    "omniRedeem": "hardhat run scripts/omniRedeem.ts --network linea_testnet",
     "clean-deployments": "rm -rf deployments"
   },
   "keywords": [],
